--- a/dbConn.properties
+++ b/dbConn.properties
@@ -1,10 +1,10 @@
 driverClassName=com.mysql.jdbc.Driver
-#url=jdbc:mysql://192.168.1.26:3306/crawler_data?useUnicode=true&characterEncoding=utf-8&useSSL=false
-#username=root
-#password=root123
-url=jdbc:mysql://127.0.0.1:3306/world?useUnicode=true&characterEncoding=utf-8&useSSL=false
+url=jdbc:mysql://192.168.1.21:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
 username=root
-password=123456
+password=root123
+#url=jdbc:mysql://127.0.0.1:3306/world?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#username=root
+#password=123456
 filters=stat
 initialSize=10
 maxActive=20
